Changing background-color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </figure>
                         <aside>
                             <label for="albums-crybaby__songs"> 
-                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
+                                <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-crybaby__songs" name="crybaby-song">
                                     <option value="crybaby">crybaby</option>
                                     <option value="lil jeep">lil jeep</option>
@@ -80,7 +80,7 @@
                         </figure>
                         <aside>
                             <label for="albums-hellboy__songs">
-                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
+                                <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-hellboy__songs">
                                     <option value="hellboy">hellboy</option>
                                     <option value="drive by">drive by</option>
@@ -120,7 +120,7 @@
                         </figure>
                         <aside>
                             <label for="albums-cowyspt1__songs">
-                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
+                                <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-cowyspt1__songs" name="cowyspt1-song">
                                     <option value="Benz Truck">Benz Truck</option>
                                     <option value="Save That Shit">Save That Shit</option>
@@ -150,7 +150,7 @@
                             <figcaption class="albums__image__caption"><b><i><small>Come Over When You're Sober Pt.2 Album Cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-cowyspt2__songs">
-                            <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
+                            <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
                             <select class="albums__select" id="albums-cowyspt2__songs">
                                 <option value="Broken Smile">Broken Smile</option>
                                 <option value="Runaway">Runaway</option>
@@ -185,7 +185,7 @@
                             <figcaption class="albums__image__caption"><b><i><small>Everybody's Everything Album cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-everybodys_everything__songs">
-                            <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
+                            <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
                             <select class="albums__select" id="albums-everybodys_everything__songs" name="everybody's_everything-song">
                                 <option value="Broken Smile (My All)">Broken Smile (My All)</option>
                                 <option value="Runaway">Runaway</option>
@@ -213,25 +213,25 @@
                 <li>
                     <a href="https://www.instagram.com/lilpeep/" target="_blank" >
                         <img src="./Imgs/ig.png" alt="Instagram logo" width="25">
-                        <span>Instagram</span>
+                        <span class="white-shadow">Instagram</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/Lilpeep" target="_blank">
                         <img src="./Imgs/tw.png" alt="Twitter logo" width="25">
-                        <span>Twitter</span>
+                        <span class="white-shadow">Twitter</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/c/LilPeepofficial" target="_blank">
                         <img src="./Imgs/yt.png" alt="YouTube logo" width="25">
-                        <span>Youtube</span>
+                        <span class="white-shadow">Youtube</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://open.spotify.com/artist/2kCcBybjl3SAtIcwdWpUe3" target="_blank">
                         <img src="./Imgs/spotify.png" alt="Spotify logo" width="25">
-                        <span>Spotify</span>
+                        <span class="white-shadow">Spotify</span>
                     </a>
                 </li>
             </ul>
