--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <li class="header__nav__item"><a href="#">Pictures</a></li>
                     </ul>
                 </nav>
-            </header> <hr>
-
+            </header>
+            <hr class="division">
             <section class="albums">
                 <ul class="albums__list">
                     <h3><span class="color-pink">A</span>L<span class="color-pink">B</span>U<span class="color-pink">M</span>S</h3>
@@ -59,11 +59,11 @@
                                     <option value="white tee">white tee</option>
                                     <option value="driveway">driveway</option>
                                 </select>
-                                <input class="favorite-song" type="submit" value="Favorite Song"><br><hr>
+                                <input class="favorite-song" type="submit" value="Favorite Song"><br>
                             </label>
                         </aside>
-                    </article>
-
+                    </article><hr class="division">
+                    
                     <article>
                         <li>
                             <h2 class="albums__title">Hellboy</h2> <!--Hellboy Album-->
@@ -100,9 +100,9 @@
                                     <option value="move on, be strong">move on, be strong</option>
                                 </select>
                             </label>
-                            <button class="favorite-song" type="submit">Favorite Song</button><br><hr>
+                            <button class="favorite-song" type="submit">Favorite Song</button><br>
                         </aside>
-                    </article>
+                    </article><hr class="division">
 
                     <article>
                         <li>
@@ -130,10 +130,10 @@
                                     <option value="The Brightside">The Brightside</option>
                                     <option value="Problems">Problems</option>
                                 </select>
-                                <input class="favorite-song" type="submit" value="Favorite Song"><br><hr>
+                                <input class="favorite-song" type="submit" value="Favorite Song"><br>
                             </label>
                         </aside>
-                    </article>
+                    </article><hr class="division">
 
                     <article>
                         <li>
@@ -167,8 +167,8 @@
                                 <option value="Sunlight On Your Skin">Sunlight On Your Skin</option>
                             </select>
                         </label>
-                        <button class="favorite-song" type="submit">Favorite Song</button><br><hr>
-                    </article>
+                        <button class="favorite-song" type="submit">Favorite Song</button><br>
+                    </article><hr class="division">
 
                     <article>
                         <li>
@@ -203,8 +203,8 @@
                             </select>
                             <input class="favorite-song" type="submit" value="Favorite Song"><br>
                         </label>
-                    </article>
-                </ul> <hr>
+                    </article><hr class="division">
+                </ul>
             </section>
         </main>
         <footer>
