Ordering the Declaration in CSS

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <hr class="division">
             <section class="albums">
                 <ul class="albums__list">
-                    <h3><span class="color-pink">A</span>L<span class="color-pink">B</span>U<span class="color-pink">M</span>S</h3>
+                    <h3><span class="color-pink black-shadow">A</span>L<span class="color-pink black-shadow">B</span>U<span class="color-pink black-shadow">M</span>S</h3>
                     <article>
                         <li>
                             <h2 class="albums__title">Crybaby</h2> <!--Crybaby Album-->
@@ -208,7 +208,7 @@
             </section>
         </main>
         <footer>
-            <h4><span class="color-pink">Lil</span> Peep<span class="color-pink">'</span>s <span class="color-pink">social</span> media</h4>
+            <h4><span class="color-pink black-shadow">Lil</span> Peep<span class="color-pink black-shadow">'</span>s <span class="color-pink black-shadow">social</span> media</h4>
             <ul>
                 <li>
                     <a href="https://www.instagram.com/lilpeep/" target="_blank" >
