Adding a common class to Albums

--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
         <title>Lil Peep</title>
     </head>
     <body>
+        <header class="header">
+            <h1 class="header__heading"><span class="violet-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
+            <nav class="header__nav">
+                <ul>
+                    <li class="header__nav__item"><a href="#">Home</a></li>
+                    <li class="header__nav__item"><a href="#">Biography</a></li>
+                    <li class="header__nav__item"><a href="#">Albums</a></li>
+                    <li class="header__nav__item"><a href="#">EP's</a></li>
+                    <li class="header__nav__item"><a href="#">Best Known Songs</a></li>
+                    <li class="header__nav__item"><a href="#">Pictures</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <main>
-            <header class="header">
-                <h1 class="header__heading"><span class="violet-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
-                <nav class="header__nav">
-                    <ul>
-                        <li class="header__nav__item"><a href="#">Home</a></li>
-                        <li class="header__nav__item"><a href="#">Biography</a></li>
-                        <li class="header__nav__item"><a href="#">Albums</a></li>
-                        <li class="header__nav__item"><a href="#">EP's</a></li>
-                        <li class="header__nav__item"><a href="#">Best Known Songs</a></li>
-                        <li class="header__nav__item"><a href="#">Pictures</a></li>
-                    </ul>
-                </nav>
-            </header>
             <hr class="division">
             <section class="albums">
                 <ul class="albums__list">
                     <h3><span class="color-pink black-shadow">A</span>L<span class="color-pink black-shadow">B</span>U<span class="color-pink black-shadow">M</span>S</h3>
-                    <article>
+                    <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Crybaby</h2> <!--Crybaby Album-->
                         </li>
@@ -64,7 +65,7 @@
                         </aside>
                     </article><hr class="division">
                     
-                    <article>
+                    <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Hellboy</h2> <!--Hellboy Album-->
                         </li>
@@ -104,7 +105,7 @@
                         </aside>
                     </article><hr class="division">
 
-                    <article>
+                    <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Come Over When You're Sober Pt.1</h2> <!--Come Over When You're Sober Pt.1 Album-->
                         </li>
@@ -135,7 +136,7 @@
                         </aside>
                     </article><hr class="division">
 
-                    <article>
+                    <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Come Over When You're Sober Pt.2</h2> <!--Come Over When You're Sober Pt.2 Album-->
                         </li>
@@ -170,7 +171,7 @@
                         <button class="favorite-song" type="submit">Favorite Song</button><br>
                     </article><hr class="division">
 
-                    <article>
+                    <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Everybody's Everything</h2> <!--Everybody's Everything Album-->
                         </li>
