--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 </ul>
             </nav>
         </header>
-
+        <hr class="division">
         <main>
-            <hr class="division">
+            
+            <h3><span class="color-pink black-shadow">A</span>L<span class="color-pink black-shadow">B</span>U<span class="color-pink black-shadow">M</span>S</h3>
             <section class="albums">
                 <ul class="albums__list">
-                    <h3><span class="color-pink black-shadow">A</span>L<span class="color-pink black-shadow">B</span>U<span class="color-pink black-shadow">M</span>S</h3>
                     <article class="albums__list-album">
                         <li>
                             <h2 class="albums__title">Crybaby</h2> <!--Crybaby Album-->
@@ -48,22 +48,24 @@
                         <aside>
                             <label for="albums-crybaby__songs"> 
                                 <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
-                                <select class="albums__select" id="albums-crybaby__songs" name="crybaby-song">
-                                    <option value="crybaby">crybaby</option>
-                                    <option value="lil jeep">lil jeep</option>
-                                    <option value="yesterday">yesterday</option>
-                                    <option value="absolute in doubt">absolute in doubt</option>
-                                    <option value="ghost girl">ghost girl</option>
-                                    <option value="big city blues">big city blues</option>
-                                    <option value="skyscrapers">skyscrapers</option>
-                                    <option value="nineteen">nineteen</option>
-                                    <option value="white tee">white tee</option>
-                                    <option value="driveway">driveway</option>
-                                </select>
-                                <input class="favorite-song" type="submit" value="Favorite Song"><br>
+                                <div class="albums_form">
+                                    <select class="albums__select" id="albums-crybaby__songs" name="crybaby-song">
+                                        <option value="crybaby">crybaby</option>
+                                        <option value="lil jeep">lil jeep</option>
+                                        <option value="yesterday">yesterday</option>
+                                        <option value="absolute in doubt">absolute in doubt</option>
+                                        <option value="ghost girl">ghost girl</option>
+                                        <option value="big city blues">big city blues</option>
+                                        <option value="skyscrapers">skyscrapers</option>
+                                        <option value="nineteen">nineteen</option>
+                                        <option value="white tee">white tee</option>
+                                        <option value="driveway">driveway</option>
+                                    </select>
+                                    <input class="albums__select__favorite-song" type="submit" value="Favorite Song"><br>
+                                </div>
                             </label>
                         </aside>
-                    </article><hr class="division">
+                    </article>
                     
                     <article class="albums__list-album">
                         <li>
@@ -82,28 +84,30 @@
                         <aside>
                             <label for="albums-hellboy__songs">
                                 <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
-                                <select class="albums__select" id="albums-hellboy__songs">
-                                    <option value="hellboy">hellboy</option>
-                                    <option value="drive by">drive by</option>
-                                    <option value="OMFG">OMFG</option>
-                                    <option value="the song they played">the song they played</option>
-                                    <option value="fucked up">fucked up</option>
-                                    <option value="cobain">cobain</option>
-                                    <option value="gucci mane">gucci mane</option>
-                                    <option value="interlude">interlude</option>
-                                    <option value="worlds away">worlds away</option>
-                                    <option value="red drop shawty">red drop shawty</option>
-                                    <option value="girls">girls</option>
-                                    <option value="nose ring">nose ring</option>
-                                    <option value="we think too much">we think too much</option>
-                                    <option value="the last thing i wanna do">the last thing i wanna do</option>
-                                    <option value="walk away as the door slams">walk away as the door slams</option>
-                                    <option value="move on, be strong">move on, be strong</option>
-                                </select>
+                                <div class="albums_form">
+                                    <select class="albums__select" id="albums-hellboy__songs">
+                                        <option value="hellboy">hellboy</option>
+                                        <option value="drive by">drive by</option>
+                                        <option value="OMFG">OMFG</option>
+                                        <option value="the song they played">the song they played</option>
+                                        <option value="fucked up">fucked up</option>
+                                        <option value="cobain">cobain</option>
+                                        <option value="gucci mane">gucci mane</option>
+                                        <option value="interlude">interlude</option>
+                                        <option value="worlds away">worlds away</option>
+                                        <option value="red drop shawty">red drop shawty</option>
+                                        <option value="girls">girls</option>
+                                        <option value="nose ring">nose ring</option>
+                                        <option value="we think too much">we think too much</option>
+                                        <option value="the last thing i wanna do">the last thing i wanna do</option>
+                                        <option value="walk away as the door slams">walk away as the door slams</option>
+                                        <option value="move on, be strong">move on, be strong</option>
+                                    </select>
+                                    <input class="albums__select__favorite-song" type="submit" value="Favorite Song"><br>
+                                </div>
                             </label>
-                            <button class="favorite-song" type="submit">Favorite Song</button><br>
                         </aside>
-                    </article><hr class="division">
+                    </article>
 
                     <article class="albums__list-album">
                         <li>
@@ -122,19 +126,21 @@
                         <aside>
                             <label for="albums-cowyspt1__songs">
                                 <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
-                                <select class="albums__select" id="albums-cowyspt1__songs" name="cowyspt1-song">
-                                    <option value="Benz Truck">Benz Truck</option>
-                                    <option value="Save That Shit">Save That Shit</option>
-                                    <option value="Awful Things">Save That Shit</option>
-                                    <option value="U said">U said</option>
-                                    <option value="Better Off (Dying)">Better Off (Dying)</option>
-                                    <option value="The Brightside">The Brightside</option>
-                                    <option value="Problems">Problems</option>
-                                </select>
-                                <input class="favorite-song" type="submit" value="Favorite Song"><br>
+                                <div class="albums_form">
+                                    <select class="albums__select" id="albums-cowyspt1__songs" name="cowyspt1-song">
+                                        <option value="Benz Truck">Benz Truck</option>
+                                        <option value="Save That Shit">Save That Shit</option>
+                                        <option value="Awful Things">Save That Shit</option>
+                                        <option value="U said">U said</option>
+                                        <option value="Better Off (Dying)">Better Off (Dying)</option>
+                                        <option value="The Brightside">The Brightside</option>
+                                        <option value="Problems">Problems</option>
+                                    </select>
+                                    <input class="albums__select__favorite-song" type="submit" value="Favorite Song"><br>
+                                </div>
                             </label>
                         </aside>
-                    </article><hr class="division">
+                    </article>
 
                     <article class="albums__list-album">
                         <li>
@@ -152,24 +158,26 @@
                         </figure>
                         <label for="albums-cowyspt2__songs">
                             <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
-                            <select class="albums__select" id="albums-cowyspt2__songs">
-                                <option value="Broken Smile">Broken Smile</option>
-                                <option value="Runaway">Runaway</option>
-                                <option value="Sex with My Ex">Sex with My Ex</option>
-                                <option value="Cry Alone">Cry Alone</option>
-                                <option value="Leanin'">Leanin'</option>
-                                <option value="16 Lines">16 Lines</option>
-                                <option value="Life is Beautiful">Life is Beautiful</option>
-                                <option value="Hate Me">Hate Me</option>
-                                <option value="IDGAF">IDGAF</option>
-                                <option value="White Girl">IDGAF</option>
-                                <option value="Fingers">Fingers</option>
-                                <option value="Falling Down">Falling Down</option>
-                                <option value="Sunlight On Your Skin">Sunlight On Your Skin</option>
-                            </select>
+                            <div class="albums_form">
+                                <select class="albums__select" id="albums-cowyspt2__songs">
+                                    <option value="Broken Smile">Broken Smile</option>
+                                    <option value="Runaway">Runaway</option>
+                                    <option value="Sex with My Ex">Sex with My Ex</option>
+                                    <option value="Cry Alone">Cry Alone</option>
+                                    <option value="Leanin'">Leanin'</option>
+                                    <option value="16 Lines">16 Lines</option>
+                                    <option value="Life is Beautiful">Life is Beautiful</option>
+                                    <option value="Hate Me">Hate Me</option>
+                                    <option value="IDGAF">IDGAF</option>
+                                    <option value="White Girl">IDGAF</option>
+                                    <option value="Fingers">Fingers</option>
+                                    <option value="Falling Down">Falling Down</option>
+                                    <option value="Sunlight On Your Skin">Sunlight On Your Skin</option>
+                                </select>
+                                <input class="albums__select__favorite-song" type="submit" value="Favorite Song"><br>
+                            </div>
                         </label>
-                        <button class="favorite-song" type="submit">Favorite Song</button><br>
-                    </article><hr class="division">
+                    </article>
 
                     <article class="albums__list-album">
                         <li>
@@ -187,27 +195,30 @@
                         </figure>
                         <label for="albums-everybodys_everything__songs">
                             <h4 class="albums__question white-shadow">What's your favorite song from this album?</h4>
-                            <select class="albums__select" id="albums-everybodys_everything__songs" name="everybody's_everything-song">
-                                <option value="Broken Smile (My All)">Broken Smile (My All)</option>
-                                <option value="Runaway">Runaway</option>
-                                <option value="Sex with My Ex">Sex with My Ex</option>
-                                <option value="Cry Alone">Cry Alone</option>
-                                <option value="Leanin'">Leanin'</option>
-                                <option value="16 Lines">16 Lines</option>
-                                <option value="Life is Beautiful">Life is Beautiful</option>
-                                <option value="Hate Me">Hate Me</option>
-                                <option value="IDGAF">IDGAF</option>
-                                <option value="White Girl">White Girl</option>
-                                <option value="Fingers">Fingers</option>
-                                <option value="Falling Down">Falling Down</option>
-                                <option value="Sunlight On Your Skin">Sunlight On Your Skin</option>
-                            </select>
-                            <input class="favorite-song" type="submit" value="Favorite Song"><br>
+                            <div class="albums_form">
+                                <select class="albums__select" id="albums-everybodys_everything__songs" name="everybody's_everything-song">
+                                    <option value="Broken Smile (My All)">Broken Smile (My All)</option>
+                                    <option value="Runaway">Runaway</option>
+                                    <option value="Sex with My Ex">Sex with My Ex</option>
+                                    <option value="Cry Alone">Cry Alone</option>
+                                    <option value="Leanin'">Leanin'</option>
+                                    <option value="16 Lines">16 Lines</option>
+                                    <option value="Life is Beautiful">Life is Beautiful</option>
+                                    <option value="Hate Me">Hate Me</option>
+                                    <option value="IDGAF">IDGAF</option>
+                                    <option value="White Girl">White Girl</option>
+                                    <option value="Fingers">Fingers</option>
+                                    <option value="Falling Down">Falling Down</option>
+                                    <option value="Sunlight On Your Skin">Sunlight On Your Skin</option>
+                                </select>
+                                <input class="albums__select__favorite-song" type="submit" value="Favorite Song"><br>
+                            </div>
                         </label>
-                    </article><hr class="division">
+                    </article>
                 </ul>
             </section>
         </main>
+        <hr class="division">
         <footer>
             <h4><span class="color-pink black-shadow">Lil</span> Peep<span class="color-pink black-shadow">'</span>s <span class="color-pink black-shadow">social</span> media</h4>
             <ul>
